Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/Package_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Co_op_Contact_Email__c</fullName>
        <label>Co-op Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <label>DBA Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Website_URL__c</fullName>
        <label>Dealer Website URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_Line_Pro_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Front-Line Pro Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.New_Car_Make__c</field>
                <operation>equals</operation>
                <valueField>Model__c.Make__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>Package Configurations</relationshipLabel>
        <relationshipName>Package_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Make_KBB_Lead_Driver__c</fullName>
        <inlineHelpText>KBB Lead Driver Make</inlineHelpText>
        <label>KBB Lead Driver Make</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfa Romeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datsun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeLorean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <formula>IF( NOT(ISPICKVAL(Tier_Governor_Value__c,&quot;&quot;)),
    TEXT(Tier_Governor_Value__c),
    IF( NOT(ISPICKVAL( New_Car_Make__c ,&quot;&quot;)),
        TEXT(New_Car_Make__c),
        IF( NOT(ISPICKVAL( Used_Car_Make__c ,&quot;&quot;)),
            TEXT(Used_Car_Make__c),
            NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Car_Make_Quantity__c</fullName>
        <label>New Car Make Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Car_Make__c</fullName>
        <label>New Car Make</label>
        <picklist>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Co_op_Contact_Email__c</fullName>
        <label>New Co-op Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OEM_Id__c</fullName>
        <label>OEM Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <formula>Order_Product__r.OrderId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Item_ID__c</fullName>
        <formula>Order_Product__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Item ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Package Configurations</relationshipLabel>
        <relationshipName>Package_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master Detail relationship to Product Configuration</description>
        <label>Product Configuration</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Package Configurations</relationshipLabel>
        <relationshipName>Package_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKU_Type__c</fullName>
        <formula>TEXT(Order_Product__r.PricebookEntry.Product2.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Email_Address__c</fullName>
        <label>Text Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Advertised_Make__c</fullName>
        <inlineHelpText>Premium Advertised Make</inlineHelpText>
        <label>Premium Advertised Make</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfa Romeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datsun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeLorean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Co_op_Level_of_Service__c</fullName>
        <inlineHelpText>Premium Co-op Level of Service</inlineHelpText>
        <label>Premium Co-op Level of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autotrader Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Type__c</fullName>
        <inlineHelpText>Premium Type</inlineHelpText>
        <label>Premium Type</label>
        <picklist>
            <picklistValues>
                <fullName>All Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfa Romeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datsun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeLorean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Value__c</fullName>
        <inlineHelpText>Premium Value</inlineHelpText>
        <label>Premium Value</label>
        <picklist>
            <picklistValues>
                <fullName>Early Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfa Romeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datsun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeLorean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Vehicle_Monthly_Rate__c</fullName>
        <inlineHelpText>Premium Vehicle Monthly Rate</inlineHelpText>
        <label>Premium Vehicle Monthly Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Governor_Vehicle_Quantity__c</fullName>
        <inlineHelpText>Premium Vehicle Quantity</inlineHelpText>
        <label>Premium Vehicle Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used_Car_Make_Quantity__c</fullName>
        <label>Used Car Make Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used_Car_Make__c</fullName>
        <label>Used Car Make</label>
        <picklist>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_Co_op_Contact_Email__c</fullName>
        <label>Used Co-op Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>XML_Email_Address__c</fullName>
        <label>XML Email Address</label>
        <type>Email</type>
    </fields>
    <label>Package Configuration</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Package Configuration Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Configurations</pluralLabel>
    <recordTypes>
        <fullName>GM_Package</fullName>
        <active>true</active>
        <description>Package Configuration record type for GM Packages</description>
        <label>GM Package</label>
    </recordTypes>
    <recordTypes>
        <fullName>Premium_Package</fullName>
        <active>true</active>
        <description>Package Configuration record type for Premium Packages</description>
        <label>Premium Package</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>